Add simple translation

--- a/user/config/site.yaml
+++ b/user/config/site.yaml
@@ -30,6 +30,10 @@ displaymenuentries:
 menu:
   - text: Meditation
     url: http://www.starting-meditation.com/
+  - text: DE
+    url: /de
+  - text: EN
+    url: /en
 hidehomemenulink: false
 hidesidebaronblogpages:
   enabled: false
