--- a/crowdin.yml
+++ b/crowdin.yml
@@ -1,13 +1,13 @@
 files:
   - source: item.en.md
-    translation: '%original_path%/item.%two_letters_code%.md'
+    translation: /%original_path%/item.%two_letters_code%.md
     languages_mapping:
       two_letters_code:
         en: en
   - source: sidebarpage.en.md
-    translation: '%original_path%/sidebarpage.%two_letters_code%.md'
+    translation: /%original_path%/sidebarpage.%two_letters_code%.md
     languages_mapping:
       two_letters_code:
         en: en
   - source: default.en.md
-    translation: '%original_path%/sidebarpage.%two_letters_code%.md'
+    translation: /%original_path%/sidebarpage.%two_letters_code%.md
