--- a/user/config/system.yaml
+++ b/user/config/system.yaml
@@ -12,7 +12,7 @@ languages:
   supported:
     - en
     - de
-  include_default_lang: true
+  include_default_lang: false
   translations: true
   translations_fallback: true
   session_store_active: false
