--- a/user/themes/course-hub-bootstrap/languages.yaml
+++ b/user/themes/course-hub-bootstrap/languages.yaml
@@ -1,6 +1,10 @@
 en:
   GITHUB:
     EDIT_LINK_TEXT: Edit this Page
+  MEDITATION:
+    URL: http://www.starting-meditation.com/
 de:
   GITHUB:
     EDIT_LINK_TEXT: Diese Seite bearbeiten
+  MEDITATION:
+    URL: http://www.starting-meditation.com/de
