--- a/crowdin.yml
+++ b/crowdin.yml
@@ -11,3 +11,5 @@ files:
         en: en
   - source: default.en.md
     translation: /%original_path%/sidebarpage.%two_letters_code%.md
+  - source: sidebar.en.md
+    translation: /%original_path%/sidebar.%two_letters_code%.md
