Update Crowdin configuration file

--- a/crowdin.yml
+++ b/crowdin.yml
@@ -10,7 +10,7 @@ files:
       two_letters_code:
         en: en
   - source: default.en.md
-    translation: /%original_path%/sidebarpage.%two_letters_code%.md
+    translation: /%original_path%/default.%two_letters_code%.md
   - source: sidebar.en.md
     translation: /%original_path%/sidebar.%two_letters_code%.md
   - source: important-reminders.en.md
