Add translations for resources

--- a/user/themes/course-hub-bootstrap/languages.yaml
+++ b/user/themes/course-hub-bootstrap/languages.yaml
@@ -6,7 +6,7 @@ en:
     URL: http://www.starting-meditation.com/
 de:
   GITHUB:
-    EDIT_LINK_TEXT: Diese Seite bearbeiten
+    EDIT_LINK_TEXT: Seite bearbeiten
   MEDITATION:
     TEXT: Meditation
     URL: http://www.starting-meditation.com/de
