Change meditation to buddhist meditation

--- a/user/themes/course-hub-bootstrap/languages.yaml
+++ b/user/themes/course-hub-bootstrap/languages.yaml
@@ -3,7 +3,7 @@ en:
     EDIT_LINK_TEXT: Edit this Page
   MEDITATION:
     TEXT: Meditation
-    URL: http://www.starting-meditation.com/
+    URL: https://studybuddhism.com/en/essentials/how-to/how-to-meditate
   STUDY:
     TEXT: Study
     URL: https://studybuddhism.com
@@ -12,7 +12,7 @@ de:
     EDIT_LINK_TEXT: bearbeiten
   MEDITATION:
     TEXT: Meditation
-    URL: http://www.starting-meditation.com/de
+    URL: https://studybuddhism.com/de/grundlagen/wie/wie-man-meditiert
   STUDY:
     TEXT: Lernen
     URL: https://studybuddhism.com/de
