Non-working course page type

--- a/user/themes/mytheme/mytheme.yaml
+++ b/user/themes/mytheme/mytheme.yaml
@@ -5,5 +5,8 @@ streams:
      prefixes:
        '':
        - user/themes/mytheme
+       - user/themes/course-hub-bones
        - user/themes/course-hub-bootstrap
        - user/themes/bootstrap
+dropdown:
+  enabled: false
